stop hero gradient from disappearing on mobile

--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -223,10 +223,6 @@
     position: relative;
   }
 
-  .banner::before {
-    display: none !important;
-  }
-
   .banner--stacked .banner__media-image-half {
     width: 100%;
   }
